refactor: API routes
