# openapi.yaml
@@ -22,7 +22,7 @@ paths:
                 url:
                   type: string
                   description: The URL to be shortened
-                  example: https://www.example.com
+                  example: https://www.google.com
       responses:
         '200':
           description: OK
@@ -34,7 +34,7 @@ paths:
                   url:
                     type: string
                     description: The shortened URL
-                    example: https://localhost:3000/aksjd823
+                    example: suKX7hF
         '400':
           description: Bad Request
     get:
@@ -48,39 +48,45 @@ paths:
           description: Maximum number of objects to return
           schema:
             type: integer
-            minimum: 10 # Optional: Set minimum allowed value
+            minimum: 10
         - in: query
           name: skip
           required: false
           description: Number of objects to skip before starting results
           schema:
             type: integer
-            minimum: 0 # Optional: Set minimum allowed value
+            minimum: 0
       responses:
         '200':
           description: OK
           content:
             application/json:
               schema:
-                type: array # Response is an array
-                items:
-                  type: object # Each item in the array is an object
-                  # Define the properties of the object here
-                  properties:
-                    original: # Example property name
-                      type: string
-                      description: Original URL
-                      example: https://www.google.com
-                    alias:
-                      type: string
-                      description: URL alias
-                      example: suKX7hF
+                type: object
+                properties:
+                  urls:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        alias:
+                          type: string
+                          description: Name of the object
+                          example: suKX7hF
+                        original:
+                          type: string
+                          description: Original URL
+                          example: https://www.google.com
+                        createdAt:
+                          type: string
+                          description: Created date
+                          example: 2024-05-09T06:22:58.424Z
 
-  /{alias}:
+  /url/{alias}:
     get:
       tags:
         - 'URL'
-      summary: Gets the original URL
+      summary: Gets the original URL and redirects
       parameters:
         - in: path
           name: alias
@@ -90,8 +96,8 @@ paths:
           description: Alias of a shortened URL
           example: suKX7hF
       responses:
-        '301':
-          description: Moved Permanently
+        '307':
+          description: Temporary Redirect
           headers:
             Location:
               description: URL to redirect to
