# src/index.ts
@@ -11,6 +11,7 @@ import { pinoHttp } from 'pino-http'
 import 'dotenv/config'
 import { UrlRepository } from './repositories/url/repository'
 import gracefulShutdown from 'http-graceful-shutdown'
+import { ExpressRouter } from './api/router'
 
 void main()
 
@@ -50,51 +51,9 @@ async function main() {
   const urlService = new UrlService(shortUrlRepo)
   const urlController = new UrlController(urlService)
 
-  app.post('/url', async (req: express.Request, res: express.Response) => {
-    req.log.info('request received')
+  const router = new ExpressRouter(urlController)
 
-    try {
-      const url = await urlController.shortenUrl(req.body.url)
-      res.status(200).json({
-        url,
-      })
-    } catch (e) {
-      res.status(500).send((e as Error).message)
-    }
-  })
-
-  app.get('/url', async (req: express.Request, res: express.Response) => {
-    req.log.info('request received')
-    let limit = 10
-    let skip = 0
-
-    if (req.query) {
-      limit = Number(req.query['limit'])
-      skip = Number(req.query['skip'])
-    }
-
-    try {
-      const urls = await urlController.getUrls(limit, skip)
-      res.status(200).json({
-        urls,
-      })
-    } catch (e) {
-      res.status(500).send((e as Error).message)
-    }
-  })
-
-  app.get('/:alias', async (req: express.Request, res: express.Response) => {
-    req.log.info('request received')
-
-    try {
-      const url = await urlController.getOriginalUrl(req.params.alias)
-      if (!url) return res.sendStatus(404)
-
-      res.status(200).json({ url })
-    } catch (e) {
-      res.status(500).send((e as Error).message)
-    }
-  })
+  app.use('/api', router.create())
 
   const server = app.listen(port, () => {
     logger.info(`Server running on port ${port}`)
