# src/url/controller.ts
@@ -1,45 +1,65 @@
+import { HandlerFunction, IControllerRequest } from '../api/router'
 import { IUrlService } from './service'
 
 export interface IUrlController {
-  shortenUrl(url: string): Promise<string>
-  getOriginalUrl(id: string): Promise<string>
-  getUrls(limit: number, skip: number): Promise<IUrlHttpObjects[]>
-}
-
-interface IUrlHttpObjects {
-  alias: string
-  original: string
-  createdAt: string
+  shortenUrl: HandlerFunction
+  getOriginalUrl: HandlerFunction
+  getUrls: HandlerFunction
 }
 
 export class UrlController implements IUrlController {
   constructor(private readonly urlService: IUrlService) {}
 
-  public shortenUrl = async (url: string) => {
-    const newUrl = await this.urlService.createShortUrl(url)
+  public shortenUrl = async (payload: IControllerRequest) => {
+    const originalUrl = payload.body.url as string
+    const shortUrl = await this.urlService.createShortUrl(originalUrl)
 
-    return newUrl
+    return {
+      code: 200,
+      body: {
+        url: shortUrl,
+      },
+    }
   }
 
-  public getOriginalUrl = async (id: string) => {
-    const originalUrl = await this.urlService.getUrl(id)
+  public getOriginalUrl = async (payload: IControllerRequest) => {
+    const alias = payload.params.alias as string
 
-    return originalUrl
+    const originalUrl = await this.urlService.getUrl(alias)
+    if (!originalUrl)
+      return {
+        code: 404,
+        body: null,
+      }
+
+    return {
+      code: 200,
+      body: {
+        url: originalUrl,
+      },
+    }
   }
 
-  public getUrls = async (limit: number, skip: number) => {
-    const urls = await this.urlService.getUrls(limit, skip)
+  public getUrls = async (payload: IControllerRequest) => {
+    let limit = 10
+    let skip = 0
 
-    const response: IUrlHttpObjects[] = []
-
-    for (const u of urls) {
-      response.push({
-        alias: u.alias,
-        original: u.original,
-        createdAt: u.createdAt.toISOString(),
-      })
+    if (payload.query) {
+      limit = Number(payload.query['limit'])
+      skip = Number(payload.query['skip'])
     }
 
-    return response
+    const shortenedUrls = await this.urlService.getUrls(limit, skip)
+
+    const urls = shortenedUrls.map((u) => {
+      return { alias: u.alias, original: u.original, createdAt: u.createdAt.toISOString() }
+    })
+
+    return {
+      code: 200,
+      body: {
+        urls,
+      },
+    }
   }
 }
